[gd_scene load_steps=29 format=3 uid="uid://6guy5rxqs3n2"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_lbma7"]
[ext_resource type="Texture2D" uid="uid://brcicxht2alae" path="res://sprites/player/idle.png" id="2_2amsf"]
[ext_resource type="Texture2D" uid="uid://d2cad3qjvrqkc" path="res://sprites/player/walk.png" id="3_bnrw3"]
[ext_resource type="AudioStream" uid="uid://b0lcnku8y725o" path="res://sfx/steppin3.wav" id="4_fi0ek"]
[ext_resource type="PackedScene" uid="uid://l2redlkqy0uh" path="res://scenes/dust.tscn" id="5_is107"]
[ext_resource type="Script" path="res://scripts/terrainDetector.gd" id="6_j3yfp"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0qbx4"]
radius = 8.5
height = 35.0

[sub_resource type="AtlasTexture" id="AtlasTexture_7muyb"]
atlas = ExtResource("2_2amsf")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oem3j"]
atlas = ExtResource("2_2amsf")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vb8ko"]
atlas = ExtResource("2_2amsf")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6rtfk"]
atlas = ExtResource("2_2amsf")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_078bj"]
atlas = ExtResource("2_2amsf")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nggns"]
atlas = ExtResource("2_2amsf")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ku4ma"]
atlas = ExtResource("2_2amsf")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7u6i4"]
atlas = ExtResource("2_2amsf")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kgt80"]
atlas = ExtResource("2_2amsf")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_aoy43"]
atlas = ExtResource("2_2amsf")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h1uj7"]
atlas = ExtResource("3_bnrw3")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_evymg"]
atlas = ExtResource("3_bnrw3")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_byndh"]
atlas = ExtResource("3_bnrw3")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jc778"]
atlas = ExtResource("3_bnrw3")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1eor"]
atlas = ExtResource("3_bnrw3")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p3bti"]
atlas = ExtResource("3_bnrw3")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iotkd"]
atlas = ExtResource("3_bnrw3")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_flrte"]
atlas = ExtResource("3_bnrw3")
region = Rect2(448, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_ngh5d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7muyb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oem3j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vb8ko")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6rtfk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_078bj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nggns")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ku4ma")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7u6i4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kgt80")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aoy43")
}],
"loop": true,
"name": &"idle",
"speed": 7.5
}, {
"frames": [],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h1uj7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_evymg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_byndh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jc778")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1eor")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p3bti")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iotkd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_flrte")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_tbsfw"]
random_pitch = 1.02
random_volume_offset_db = 1.0
streams_count = 1
stream_0/stream = ExtResource("4_fi0ek")
stream_0/weight = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6w6c7"]
size = Vector2(16, 3)

[node name="Player" type="CharacterBody2D"]
collision_layer = 65
script = ExtResource("1_lbma7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 2)
shape = SubResource("CapsuleShape2D_0qbx4")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ngh5d")
animation = &"walk"
autoplay = "walk"
frame_progress = 0.94681

[node name="Steps" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_tbsfw")
volume_db = 0.677
attenuation = 1.23114
panning_strength = 0.0
bus = &"SFX"

[node name="JumpBuffer" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[node name="CoyoteTime" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="JumpHeight" type="Timer" parent="."]
wait_time = 0.01
one_shot = true

[node name="Dust" parent="." instance=ExtResource("5_is107")]
position = Vector2(2, 77)

[node name="TerrainDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0
script = ExtResource("6_j3yfp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="TerrainDetector"]
position = Vector2(1, 19)
shape = SubResource("RectangleShape2D_6w6c7")

[connection signal="timeout" from="JumpBuffer" to="." method="jumpBufferTimeout"]
[connection signal="timeout" from="CoyoteTime" to="." method="coyoteTimeout"]
[connection signal="timeout" from="JumpHeight" to="." method="jumpHeightTimeout"]
[connection signal="area_shape_entered" from="TerrainDetector" to="TerrainDetector" method="areaShapeEntered"]
[connection signal="body_shape_entered" from="TerrainDetector" to="TerrainDetector" method="bodyShapeEntered"]

[editable path="Dust"]
